updated swagger docs, modified cache with redis
